libgdx - fix few memory leaks